--- a/app/assets/stylesheets/camps.scss
+++ b/app/assets/stylesheets/camps.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the CodeClasses controller here.
+// Place all the styles related to the Camps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
