--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,4 @@
-<h1>SHOW PAGE</h1>
+<h1> <%= @student.first_name %></h1>
+
+
+<%= link_to "Remove Student", "/students/#{ @student.id }", method: :delete %>
