--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,19 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+
+
+
+
+<ul>
+<li>
+  
+  <%= link_to "sign up employee", new_employee_registration_path %>
+</li>
+
+<li>
+  
+  <%= link_to "sign up guardian", new_guardian_registration_path %>
+</li>
+
+</ul>
