--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -27,14 +27,66 @@ Add Your Company Logo
 <% end %>
 
 <%= if current_employee.user_type == "admin" %>
-	<% @guardian_pending.each do | guardian | %>
-			guardian.first_name
-			guardian.last_name
-			<%= link_to '#{guardian.first_name guardian.last_name}', '/guardians/#{guardian.id}' %>
-			guardian.created_at
-			guardian.status
-			<input type="Submit" name="Approve">	
-	<% end %>	
+	<table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Bio</th>
+            <th>Created At</th>
+            <th>Status</th>
+        </tr>
+        <% @guardian_pending.each do | guardian | %>
+    			<tr>
+                    <td>guardian.first_name</td>
+    			     <td>guardian.last_name</td>
+    			     <td><%= link_to '#{guardian.first_name guardian.last_name}', '/guardians/#{guardian.id}' %></td>
+    			     <td>guardian.created_at</td>
+    			     <td>guardian.status</td>
+                </tr>
+    			<input type="Submit" name="Approve">	
+    	<% end %>
+    </table>
+
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Bio</th>
+            <th>Created At</th>
+            <th>Status</th>
+        </tr>
+        <% @volunteer_pending.each do | volunteer | %>
+                <tr>
+                    <td>volunteer.first_name</td>
+                     <td>volunteer.last_name</td>
+                     <td><%= link_to '#{volunteer.first_name volunteer.last_name}', '/volunteers/#{volunteer.id}' %></td>
+                     <td>volunteer.created_at</td>
+                     <td>volunteer.status</td>
+                </tr>
+                <input type="Submit" name="Approve">    
+        <% end %>
+    </table>
+
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Bio</th>
+            <th>Created At</th>
+            <th>Status</th>
+        </tr>
+        <% @partner_pending.each do | partner | %>
+                <tr>
+                    <td>partner.first_name</td>
+                     <td>partner.last_name</td>
+                     <td><%= link_to '#{partner.first_name partner.last_name}', '/partners/#{partner.id}' %></td>
+                     <td>partner.created_at</td>
+                     <td>partner.status</td>
+                </tr>
+                <input type="Submit" name="Approve">    
+        <% end %>  
+    </table>
+
 <% end %>
 
     <%= form_tag '/' %>
