added code to camp edit page and lowercased camp

--- a/app/views/camps/new.html.erb
+++ b/app/views/camps/new.html.erb
@@ -2,49 +2,49 @@
 
 <%= form_tag "/camp", method: :post do %>
   <div>
-    Title: <input type="text" name="title", value="<%= @Camp.title %>">
+    Title: <input type="text" name="title", value="<%= @camp.title %>">
   </div>
   <div>
-    Description: <input type="text" name="description", value="<%= @Camp.description %>">
+    Description: <input type="text" name="description", value="<%= @camp.description %>">
   </div>
   <div> 
-    Maximum number of students: <input type="integer" name="max_students", value="<%= @Camp.max_students %>">
+    Maximum number of students: <input type="integer" name="max_students", value="<%= @camp.max_students %>">
   </div>
   <div>
-    Minimum number of students: <input type="integer" name="min_students", value="<%= @Camp.min_students %>">
+    Minimum number of students: <input type="integer" name="min_students", value="<%= @camp.min_students %>">
   </div>
   <div>
-    Address: <input type="text" name="address", value="<%= @Camp.address %>">
+    Address: <input type="text" name="address", value="<%= @camp.address %>">
   </div>
   <div>
-    City: <input type="text" name="city", value="<%= @Camp.city %>">
+    City: <input type="text" name="city", value="<%= @camp.city %>">
   </div>
   <div>
-    State: <input type="text" name="state", value="<%= @Camp.state %>">
+    State: <input type="text" name="state", value="<%= @camp.state %>">
   </div>
   <div>
-    Zip: <input type="integer" name="zip", value="<%= @Camp.zip %>">
+    Zip: <input type="integer" name="zip", value="<%= @camp.zip %>">
   </div>
   <div>
-    Phone: <input type="text" name="phone", value="<%= @Camp.phone %>">
+    Phone: <input type="text" name="phone", value="<%= @camp.phone %>">
   </div>
   <div>
-    Employee ID: <input type="integer" name="employee_id", value="<%= @Camp.employee_id %>">
+    Employee ID: <input type="integer" name="employee_id", value="<%= @camp.employee_id %>">
   </div>
   <div>
-    Start Time: <input type="text" name="start_time", value="<%= @Camp.start_time %>">
+    Start Time: <input type="text" name="start_time", value="<%= @camp.start_time %>">
   </div>
   <div>
-    End Time: <input type="text" name="end_time", value="<%= @Camp.end_time %>">
+    End Time: <input type="text" name="end_time", value="<%= @camp.end_time %>">
   </div>
   <div>
-    Start Date: <input type="text" name="start_date", value="<%= @Camp.start_date %>">
+    Start Date: <input type="text" name="start_date", value="<%= @camp.start_date %>">
   </div>
   <div>
-    End Date: <input type="text" name="end_date", value="<%= @Camp.end_date %>">
+    End Date: <input type="text" name="end_date", value="<%= @camp.end_date %>">
   </div>
   <div>
-    Price: <input type="decimal" name="price", value="<%= @Camp.price %>">
+    Price: <input type="decimal" name="price", value="<%= @camp.price %>">
   </div>
 
   <input type="Submit" value="Create New Camp">
