A LOT happened, mostly in guardians controller and student create

--- a/app/views/guardians/index.html.erb
+++ b/app/views/guardians/index.html.erb
@@ -1,5 +1,6 @@
 <% @guardians.each do |guard| %>
-  <%= guard.email %>
+  
   <%= guard.first_name %> <%= guard.last_name %>
-  <%= guard.home %>
+  <%= guard.home_phone %>
+  <%= guard.email %>
 <% end %>
