added locations views and edits to employees views and cleaned up location and employee controllers

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,4 +1,4 @@
-<%= if current_employee.user_type == "admin" %>
+<%#= if current_employee.user_type == "admin" %>
     <table>
         <tr>
             <th>First Name</th>
@@ -20,4 +20,4 @@
                 <input type="Submit" name="Approve">    
         <% end %>
     </table>
-<% end %>
+<%# end %>
