added device account route

--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -1,5 +1,11 @@
 <h2>Welcome <%= current_guardian.email %></h1>
 
+
+
+<h6>Insert Profile Pic Here</h6>
+
+<%= link_to "Edit Account", edit_guardian_registration_path %>
+
 <!-- calendar goes here someday -->
 
 <h3>Sign up your Student: <a href="/students/new">HERE </a></h3>
