--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -1,6 +1,7 @@
+<h1>Camp Details</h1>
+
 <section>
   <div class="row">
-
     <h2><%= @camp.title %></h2>
     <h2><%= @camp.address %></h2>
     <h2><%= @camp.city %></h2>
