--- a/app/views/guardians/edit.html.erb
+++ b/app/views/guardians/edit.html.erb
@@ -1,1 +1,56 @@
-<!-- please use apps/views/guardians/registration/edit.html.erb -->
+<div class="well">
+<h2> Update your account </h2>
+
+<%= form_tag "/guardians/#{current_guardian.id}", method: :patch do %>
+
+<div class="form-group">
+  <%= label_tag :fist_name %>
+  <%= text_field_tag :first_name, @guardian.first_name, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :last_name %>
+  <%= text_field_tag :last_name, @guardian.last_name, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :home_phone %>
+  <%= text_field_tag :home_phone, @guardian.home_phone, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :cell_phone %>
+  <%= text_field_tag :cell_phone, @guardian.cell_phone, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :address %>
+  <%= text_field_tag :address, @guardian.address, :class => "form-control" %>
+</div>
+<div class="form-group">
+  <%= label_tag :city %>
+  <%= text_field_tag :city, @guardian.city, :class => "form-control" %>
+</div><div class="form-group">
+  <%= label_tag :state %>
+  <%= text_field_tag :state, @guardian.state, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :zip %>
+  <%= text_field_tag :zip, @guardian.zip, :class => "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= label_tag :country %>
+  <%= text_field_tag :country, @guardian.country, :class => "form-control" %>
+</div>
+
+
+<div class="form-group">
+  <%= submit_tag "Update", :class => "btn btn-success" %>
+</div>
+
+
+<% end %>
+</div>
+
