--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,24 @@
-<h1> <%= @student.first_name %></h1>
+<h1> <%= @student.first_name %> <%= @student.last_name %></h1>
+
+<h4>Address:</h4>
+<h5><%= @student.address %></h5> 
+<h5><%= @student.city %>, <%= @student.state %></h5>
+<h5><%= @student.zip %></h5>
+<h5><%= @student.country %></h5>
+<br>
+<h4>Medical</h4>
+<h5><%= @student.medical_condition %></h5>
+<h5><%= @student.medications %></h5>
+<br>
+<h4>Personal</h4>
+<h5><%= @student.birth_date %></h5>
+<h5><%= @student.gender %></h5>
+<h5><%= @student.gender %></h5>
+<br>
+<h4>Emergency Contact</h4>
+<h5><%= @student.emergency_contact %></h5>
+<h5><%= @student.emergency_contact_phone %></h5>
+
 
 <%= link_to "Edit Information", "/students/#{ @student.id}/edit"%>
 <br>
