updated home page with volunteer sign up sign in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,21 +7,28 @@
     <li>
       <%= link_to "Sign Out", destroy_employee_session_path, method: :delete %>
     </li>
+    <% elsif volunteer_signed_in? %> 
+     <li>
+       <%= link_to "Sign Out", destroy_employee_session_path, method: :delete %>
+     </li>
   <% else %>
     <li>
       <%= link_to "Sign Guardian In", new_guardian_session_path %>
     </li>
     <li>
       <%= link_to "Sign Employee In", new_employee_session_path %>
-      
     </li>
-
+    <li>
+      <%= link_to "Sign Volunteer In", new_volunteer_session_path %>
+    </li>
+    <li>
+      <%= link_to "sign up guardian", new_guardian_registration_path %>
+    </li>
     <li>
       <%= link_to "sign up employee", new_employee_registration_path %>
     </li>
-
     <li>
-      <%= link_to "sign up guardian", new_guardian_registration_path %>
+      <%= link_to "sign up volunteer", new_volunteer_registration_path %>
     </li>
   <% end %>
 </ul>
