--- a/app/views/guardians/edit.html.erb
+++ b/app/views/guardians/edit.html.erb
@@ -24,9 +24,15 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :address %>
-  <%= text_field_tag :address, @guardian.address, :class => "form-control" %>
+  <%= label_tag :address_1 %>
+  <%= text_field_tag :address_1, @guardian.address, :class => "form-control" %>
 </div>
+
+<div class="form-group">
+  <%= label_tag :address_2 %>
+  <%= text_field_tag :address_2, @guardian.address, :class => "form-control" %>
+</div>
+
 <div class="form-group">
   <%= label_tag :city %>
   <%= text_field_tag :city, @guardian.city, :class => "form-control" %>
