--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -6,7 +6,8 @@
 
 <h4>Name: <%= @guardian.first_name %> <%= @guardian.last_name %></h4>
 <h4>Address:</h4>
-<h5><%= @guardian.address %></h5> 
+<h5><%= @guardian.address_1 %></h5> 
+<h5><%= @guardian.address_2 %></h5>
 <h5><%= @guardian.city %>, <%= @guardian.state %></h5>
 <h5><%= @guardian.zip %></h5>
 
