tested styling and routes

--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -1,27 +1,31 @@
-<h2>Welcome <%= current_guardian.first_name %>!</h1>
+<div class="well">
+  <h2>Welcome <%= current_guardian.first_name %>!</h1>
 
-<h6>Insert Profile Pic Here</h6>
+  <h6>Insert Profile Pic Here</h6>
 
-<%= link_to "Edit Account", "/guardians/#{current_guardian.id}/edit" %>
+  <%= link_to "Edit Account", "/guardians/#{current_guardian.id}/edit" %>
+  <%= link_to "Edit Account2", edit_guardian_registration_path %>
 
-<h4>Name: <%= @guardian.first_name %> <%= @guardian.last_name %></h4>
-<h4>Address:</h4>
-<h5><%= @guardian.address_1 %></h5> 
-<h5><%= @guardian.address_2 %></h5>
-<h5><%= @guardian.city %>, <%= @guardian.state %></h5>
-<h5><%= @guardian.zip %></h5>
+  <h4>Name: <%= @guardian.first_name %> <%= @guardian.last_name %></h4>
+  <h3>Email <%= @guardian.email %></h3>
+  <h4>Address:</h4>
+  <h5><%= @guardian.address_1 %></h5> 
+  <h5><%= @guardian.address_2 %></h5>
+  <h5><%= @guardian.city %>, <%= @guardian.state %></h5>
+  <h5><%= @guardian.zip %></h5>
 
 
 
-<!-- calendar goes here someday -->
+  <!-- calendar goes here someday -->
 
-<h3>Sign up your Student: <a href="/students/new">HERE </a></h3>
+  <h3>Sign up your Student: <a href="/students/new">HERE </a></h3>
 
-<h3>Your Child(ren)</h3>
+  <h3>Your Child(ren)</h3>
 
-<% current_guardian.students.each do |student| %>
-<div>
- <h4><a href="/students/<%= student.id %>"><%= student.first_name %></h4>
- <br>
+  <% current_guardian.students.each do |student| %>
+    <div>
+     <h4><a href="/students/<%= student.id %>"><%= student.first_name %></h4>
+     <br>
+    </div>
+  <% end %>
 </div>
-<% end %>
