need to finish employee show for paperclip(error and questions)

--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag '/employees', method: :patch do %>
+<%= form_tag "/employees/#{current_employee.id}", method: :patch do %>
     <%= label_tag :first_name %>
     <%= text_field_tag :first_name, nil %>
 
