--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag '/employees', method: :patch do %>
+<%= form_tag "/employees/#{current_employee.id}", method: :patch do %>
     <%= label_tag :first_name %>
     <%= text_field_tag :first_name, nil %>
 
@@ -11,8 +11,10 @@
     <%= label_tag :phone %>
     <%= phone_field_tag :phone, nil %>    
 
-    <%= label_tag :address %>
-    <%= text_field_tag :address, nil %>    
+    <%= label_tag :address_1 %>
+    <%= text_field_tag :address_1, nil %>    
+     <%= label_tag :address_2 %>
+    <%= text_field_tag :address_2, nil %>
 
     <%= label_tag :city %>
     <%= text_field_tag :city, nil %>    
