--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,33 +1,28 @@
-<div>
-Image: <%= @employee.image %>
-First Name: <%= @employee.first_name %>
-Last Name: <%= @employee.last_name %>
-Bio: <%= @employee.bio %>
-Email: <%= @employee.email %>
-Phone Number: <%= @employee.phone %>
-Address: <%= @employee.address %>
-        <%= @employee.city %>
-        <%= @employee.state %>
-        <%= @employee.zip %>
+
+<div class="container">
+  <div>Image: <%= @employee.image %></div>
+  <div>First Name: <%= @employee.first_name %></div>
+  <div>Last Name: <%= @employee.last_name %></div>
+  <div>Bio: <%= @employee.bio %></div>
+  <div>Email: <%= @employee.email %></div>
+  <div>Phone Number: <%= @employee.phone %></div>
+  <div>Address: <%= @employee.address_1 %></div>
+  <div>Address 2: <%= @employee.address_1 %></div>
+  <div>City:   <%= @employee.city %></div>
+  <div> State: <%= @employee.state %></div>
+  <div>Zip Code:  <%= @employee.zip %></div>
+
+  <br>
+  <div>Add Your Company Logo</div>
+      <%= form_tag "/employees/#{@employee.id}", method: :post do %>
+      	<input type="text-field" name="company_logo">
+      <% end %>
+
+  <br>   
+
+  	<%= link_to 'Edit Homepage', '/home/edit' %>
 </div>
-<% link_to "Edit Profile", '/employees/<%= @employee.id %>/edit' %>
 
-
-<% if current_employee.user_type == "partner" %>
-Add Your Company Logo
-    <%= form_tag '/employees/<%= @employee.id %>' method: :post do %>
-    	<input type="text-field" name="company_logo">
-    <% end %>
-        
-<% end %>
-
-
-<%= if current_employee.user_type == "employee" %>
-	<%= link_to 'Edit Homepage', '/home/edit' %>
-<% end %>
-
-
-<%= if current_employee.user_type == "admin" || if current_employee.user_type == "super_admin" %>
     <div class="container">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#guardians">Guardians</a></li>
@@ -50,21 +45,9 @@ Add Your Company Logo
                           <th>Delete User</th>
                           <% end %>
                       </tr>
-                    <% @guardian_pending.each do | guardian | %>
-                            <tr>
-                                  <td>guardian.first_name</td>
-                                 <td>guardian.last_name</td>
-                                 <td><%= link_to "#{guardian.first_name guardian.last_name}", "/guardians/#{guardian.id}" %></td>
-                                 <td>guardian.created_at</td>
-                                 <td>guardian.status</td>
-                                  <% if current_employee.user_type == "super_admin" %>
-                                  <td><%= link_to "Update", "/guardians/#{guardian.id}/edit" %></td>
-                                  <td><%= link to "Delete", "/guardians/#{guardian.id}", method: :destroy %></td>
-                                  <% end %>
+                    
 
-                              </tr>
-                            <input type="Submit" name="Approve">    
-                    <% end %>
+
                 </table>
             </div>
             <div id="volunteers" class="tab-pane fade">
@@ -81,20 +64,10 @@ Add Your Company Logo
                          <th>Delete</th>
                          <% end %>
                      </tr>
-                     <% @volunteer_pending.each do | volunteer | %>
-                             <tr>
-                                 <td>volunteer.first_name</td>
-                                  <td>volunteer.last_name</td>
-                                  <td><%= link_to '#{volunteer.first_name volunteer.last_name}', '/volunteers/#{volunteer.id}' %></td>
-                                  <td>volunteer.created_at</td>
-                                  <td>volunteer.status</td>                    
-                                  <% if current_employee.user_type == "super_admin" %>
-                                 <td><%= link_to "Update", "/volunteers/#{volunteer.id}/edit" %></td>
-                                 <td><%= link to "Delete", "/volunteers/#{volunteer.id}", method: :destroy %></td>
-                                 <% end %>
-                             </tr>
-                             <input type="Submit" name="Approve">    
-                     <% end %>
+                     
+
+
+
                  </table>
             </div>
             <div id="partners" class="tab-pane fade in active">
@@ -111,24 +84,14 @@ Add Your Company Logo
                             <th>Delete</th>
                             <% end %>
                         </tr>
-                        <% @partner_pending.each do | partner | %>
-                                <tr>
-                                    <td>partner.first_name</td>
-                                     <td>partner.last_name</td>
-                                     <td><%= link_to '#{partner.first_name partner.last_name}', '/partners/#{partner.id}' %></td>
-                                     <td>partner.created_at</td>
-                                     <td>partner.status</td>
-                                    <% if current_employee.user_type == "super_admin" %>
-                                    <td><%= link_to "Update", "/partners/#{partner.id}/edit" %></td>
-                                    <td><%= link to "Delete", "/partners/#{partner.id}", method: :destroy %></td>
-                                    <% end %>
-                                </tr>
-                                <input type="Submit" name="Approve">    
-                        <% end %>  
+                        
+
+
+
                     </table>
             </div>
         </div>
     </div>
-<% end %>
+
 
 
