--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -12,7 +12,6 @@
   <div>City:   <%= @employee.city %></div>
   <div> State: <%= @employee.state %></div>
   <div>Zip Code:  <%= @employee.zip %></div>
-  <div><%= link_to 'Edit Profile', "/employees/#{@employee.id}/edit" %></div>
 
 <div>
 Image: <%= @employee.image %>
@@ -35,7 +34,7 @@ Address: <%= @employee.address_2 %>
 
 <% if current_employee.user_type == "partner" %>
 Add Your Company Logo
-    <%= form_tag "/employees/#{current_employee.id}" method: :post do %>
+    <%= form_tag "/employees/#{current_employee.id}", method: :post do %>
       <input type="text-field" name="company_logo">
     <% end %>
         
@@ -51,19 +50,20 @@ Add Your Company Logo
 
   <br>   
 
-  	<%= link_to 'Edit Homepage', '/home/edit' %>
+  	<%= link_to 'Edit Homepage' %>
 </div>
 
     <div class="container">
       <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#guardians">Guardians</a></li>
+        <li class="active"><a data-toggle="tab" href="#pending">Pending</a></li>
+        <li><a data-toggle="tab" href="#guardians">Guardings</a></li>
         <li><a data-toggle="tab" href="#volunteers">Volunteers</a></li>
         <li><a data-toggle="tab" href="#partners">Partners</a></li>
       </ul>
 
         <div class="tab-content">
-            <div id="guardians" class="tab-pane fade in active">
-              <h3>Guardians</h3>
+            <div id="pending" class="tab-pane fade in active">
+              <h3>Pending</h3>
               <table>
                       <tr>
                           <th>First Name</th>
@@ -80,6 +80,26 @@ Add Your Company Logo
 
 
                 </table>
+            </div>
+            <div id="guardians" class="tab-pane fade">
+              <h3>Guardians</h3>
+                 <table>
+                     <tr>
+                         <th>First Name</th>
+                         <th>Last Name</th>
+                         <th>Bio</th>
+                         <th>Created At</th>
+                         <th>Status</th>
+                         <% if current_employee.user_type == "super_admin" %>
+                         <th>Update</th>
+                         <th>Delete</th>
+                         <% end %>
+                     </tr>
+                     
+
+
+
+                 </table>
             </div>
             <div id="volunteers" class="tab-pane fade">
               <h3>Volunteers</h3>
