--- a/app/views/volunteers/registrations/new.html.erb
+++ b/app/views/volunteers/registrations/new.html.erb
@@ -9,6 +9,12 @@
   </div>
 
   <div class="field">
+    <%= f.label :first_name %> <br />
+    <%= f.text_field :first_name, autofocus: true %>
+    
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
