--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,10 @@
      <li>
        <%= link_to "Sign Out", destroy_employee_session_path, method: :delete %>
      </li>
+     <% elsif partner_signed_in? %> 
+     <li>
+       <%= link_to "Sign Out", destroy_partner_session_path, method: :delete %>
+     </li>
   <% else %>
     <li>
       <%= link_to "Sign Guardian In", new_guardian_session_path %>
@@ -22,6 +26,9 @@
       <%= link_to "Sign Volunteer In", new_volunteer_session_path %>
     </li>
     <li>
+      <%= link_to "Sign Partner In", new_partner_session_path %>
+    </li>
+    <li>
       <%= link_to "sign up guardian", new_guardian_registration_path %>
     </li>
     <li>
@@ -29,6 +36,9 @@
     </li>
     <li>
       <%= link_to "sign up volunteer", new_volunteer_registration_path %>
+    </li>
+    <li>
+      <%= link_to "sign up partner", new_partner_registration_path %>
     </li>
   <% end %>
 </ul>
