finished paperclip for employees

--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -8,6 +8,7 @@
 
     <%= f.file_field :image %>
     <%= submit_tag " Update" %>
+    <% end %>
 
 
 <h4>Name: <%= @guardian.first_name %> <%= @guardian.last_name %></h4>
