fixed views for camps

--- a/app/views/camps/edit.html.erb
+++ b/app/views/camps/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit camps</h1>
 
-<%= form_tag "/camp", method: :patch do %>
+<%= form_tag "/camps", method: :patch do %>
   <div>
     Title: <input type="text" name="title", value="<%= @camp.title %>">
   </div>
