--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -3,7 +3,8 @@
 <section>
   <div class="row">
     <h2><%= @camp.title %></h2>
-    <h2><%= @camp.address %></h2>
+    <h2><%= @camp.address_1 %></h2>
+    <h2><%= @camp.address_2 %></h2>
     <h2><%= @camp.city %></h2>
     <h2><%= @camp.state %></h2>
     <h2><%= @camp.zip %></h2>
