--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -3,7 +3,7 @@
 <section>
   <div class="row">
 
-    <% @camps.each do |camp| %>
+    <% @camp.each do |camp| %>
 
       <h2><%= camp.title %></h2>
       <h2><%= camp.description %></h2>
@@ -13,4 +13,5 @@
     <% end %>
 
   </div>
+  
 </section>
