students rspec testing and minor bug fixes

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="well">
-<h2> Update Students Information </h2>
+<h2> Update Student Information </h2>
 <%= form_tag "/students/#{@student.id}", method: :patch do %>
 
 <div class="form-group">
