--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="home/index">WeRNextGeneration</a>
+      <a class="navbar-brand" href="/">WeRNextGeneration</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
